<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="core_subscribe_dialog_error_label">Упс! Что-то не так</string>
	<string name="core_subscribe_dialog_error_message">Для подписки, требуется войти в аккаунт или зарегистрироваться</string>
	<string name="core_subscribe_dialog_to_registration">Зарегистрироваться</string>
	<string name="core_subscribe_dialog_to_login">Войти</string>

	<!-- {@deprecated Используй shared_base_dialog_cancel.} -->
	<string name="core_dialog_cancel">Отмена</string>
</resources>