<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_alert_dialog"
			android:orientation="vertical"
			android:padding="@dimen/spacing_24">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_4"
				android:text="@string/core_subscribe_dialog_error_label"
				style="@style/Header2Neutral800"/>

			<TextView
				android:id="@+id/description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_12"
				android:text="@string/core_subscribe_dialog_error_message"
				style="@style/Body2Neutral600"/>

			<Button
				android:id="@+id/login_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_12"
				android:text="@string/core_subscribe_dialog_to_login"
				style="@style/Widget.MyTheme.PrimaryButton"/>

			<Button
				android:id="@+id/registration_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_12"
				android:text="@string/core_subscribe_dialog_to_registration"
				style="@style/Widget.MyTheme.PrimaryButton"/>

			<Button
				android:id="@+id/cancel_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/core_dialog_cancel"
				style="@style/Widget.MyTheme.GrayButton"/>
		</LinearLayout>
	</ScrollView>
</layout>